# massdns

./: .gitignore  Dockerfile  list.h
resolver/: CMakeLists.txt  agenda.h  cache.h  main.c  resolve.h  root.h  time_queue.h
